lesson-3/https-ingress.yaml
# Did't try it
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  tls:
    - hosts:
        - dashboard.com
      secertName: dashboard-secret-tls
  rules:
    - host: dashboard.com
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
