lesson-3/old-version-dashboard-ingress-other-way.yaml
# Sub-Path way
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /kube
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
---
# Sub-domain way *can use path in side too.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: kube.dashboard.com
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
    - host: other.dashboard.com
      http:
        paths:
          - backend:
              serviceName: other-dashboard
              servicePort: 80
