lesson-3/old-version-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /ku
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
# kubectl apply -f old-version-dashboard-ingress.yaml
# kubectl get ingress -n kubernetes-dashboard --watch
# Config /etc/hosts with `<your-ip> dashboard.com`
# kubectl describe ingress dashboard-ingress -n kubernates-dashboard
# http://dashboard.com/
